# docs/swagger.yaml
@@ -33,6 +33,25 @@ definitions:
     - password
     - username
     type: object
+  types.HttpCreateUserResp:
+    properties:
+      code:
+        example: 3000
+        type: integer
+      data:
+        $ref: '#/definitions/types.HttpCreateUserRespData'
+      message:
+        example: ok
+        type: string
+      requestId:
+        example: b8974256-1f17-477f-8638-c7ebbac656d7
+        type: string
+    type: object
+  types.HttpCreateUserRespData:
+    properties:
+      activationCode:
+        type: string
+    type: object
   types.HttpGetUserWalletsResp:
     properties:
       code:
@@ -312,7 +331,7 @@ paths:
         "200":
           description: Response
           schema:
-            $ref: '#/definitions/types.HttpRespBase'
+            $ref: '#/definitions/types.HttpCreateUserResp'
         "400":
           description: Bad Request
           schema:
